background issue fixed - stackoverflow

--- a/assets/css/index.css
+++ b/assets/css/index.css
@@ -9,27 +9,21 @@
 
 body {
   font-family: "STIX Two Text", serif;
-  height: 100%;
 }
 
-#body2 {
-  background-image: url("../images/hogwarts-2.jpg");
-  background-position: center center;
-  background-repeat: no-repeat;
+.wrapper {
+  background-image:url("../images/hogwarts-2.jpg");
   background-size: cover;
-  text-align: center;
-  width: 100%;
-  height: 100%;
-}
-
-#body3 {
-  background-image: url("../images/hogwarts-2.jpg");
-  background-position: center center;
-  background-repeat: no-repeat;
-  background-size: cover;
-  text-align: center;
-  width: 100%;
-  height: 100%;
+  background-repeat:no-repeat;
+  background-position:center; 
+  -moz-background-size: cover;
+  -o-background-size: cover;
+  -webkit-background-size: cover;
+  -ms-content-zooming: none;
+  position:absolute;
+  width:100%;
+  height:100%;
+  overflow: scroll;
 }
 
 #home {
@@ -187,6 +181,7 @@ h2 {
   border: solid goldenrod;
   cursor: pointer;
   font-size: 120%;
+  text-align: center;
 }
 
 #start {
